# Medway-fix-questoes

./: .env.example  .gitignore  .ruff.toml  README.md  pyproject.toml
_bmad-output/brainstorming/: brainstorming-session-2026-02-06.md
_bmad-output/implementation-artifacts/: 1-1-inicializar-projeto-e-estrutura-base.md  1-2-criar-modelos-pydantic-de-dados.md  1-3-implementar-abstracao-de-provedores-llm.md  1-4-configurar-sqlite-para-persistencia-de-estado.md  1-5-implementar-leitor-de-excel-de-input.md  1-6-implementar-escritor-de-excel-de-output.md  2-2-implementar-agente-criador-de-questoes.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-02-07.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
prompts/: criador.md
src/construtor/agents/: __init__.py  criador.py
src/construtor/config/: __init__.py  exceptions.py
src/construtor/io/: __init__.py  excel_reader.py  (+1 more)
tests/: conftest.py
tests/test_agents/: test_criador.py  test_subfoco_generator.py
tests/test_config/: test_exceptions.py
tests/test_io/: __init__.py  test_excel_reader.py  test_excel_writer.py
tests/test_metrics/: __init__.py  test_store.py
tests/test_models/: test_feedback.py  test_integration.py  test_metrics.py  test_pipeline.py  test_question.py
tests/test_providers/: test_anthropic_provider.py  test_base.py  test_openai_provider.py
(+11 files in other folders)
